resolve some spacing issues

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -586,8 +586,12 @@ video {
   top: 0px;
 }
 
-.mt-0\.5 {
-  margin-top: 0.125rem;
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .flex {
@@ -602,8 +606,8 @@ video {
   height: 7rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-7 {
+  height: 1.75rem;
 }
 
 .h-\[calc\(100\%-2\.5rem\)\] {
@@ -626,16 +630,20 @@ video {
   max-height: 100%;
 }
 
-.min-h-6 {
-  min-height: 1.5rem;
+.min-h-7 {
+  min-height: 1.75rem;
 }
 
 .min-h-full {
   min-height: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-12 {
+  width: 3rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-\[calc\(100\%-1\.5rem\)\] {
@@ -659,12 +667,24 @@ video {
   cursor: pointer;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
 .justify-center {
   justify-content: center;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -743,9 +763,9 @@ video {
   padding-right: 1rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-1 {
@@ -754,6 +774,10 @@ video {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pt-1 {
@@ -768,8 +792,9 @@ video {
   text-align: center;
 }
 
-.text-\[\.6rem\] {
-  font-size: .6rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-sm {
@@ -851,16 +876,11 @@ video {
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
-  .md\:gap-2 {
-    gap: 0.5rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .lg\:border {
+    border-width: 1px;
   }
 }
 
